# chess_engine

./: Cargo.toml  LICENSE_MIT  README.md  index.html  index.js  package-lock.json  rebuild.sh  webpack.config.js
engine/: Cargo.toml
engine/src/: lib.rs
frontend/: index.html
frontend/assets/: engine.wasm
frontend/js/: index.js  main.js
js/: index.js  main.js
src/: chess_util.rs  lib.rs
src/board/: bitboard.rs  constants.rs
src/utils/: chess_struct.rs  chess_util.rs  constants.rs  mod.rs
tests/: basic_test.rs  bitboard_test.rs  movegen_test.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
